make 7 days multibanco paymente and window

--- a/content/payment-policies/en.mdx
+++ b/content/payment-policies/en.mdx
@@ -1,6 +1,6 @@
 # Payment Policies
 
-_Effective Date:_ May 29, 2025
+_Effective Date:_ June 3, 2025
 
 These Payment Policies govern all financial transactions conducted through the Eleva.care platform. By using our payment services, you agree to be bound by these policies in addition to our Terms and Conditions.
 
@@ -15,20 +15,29 @@ Eleva.care accepts various payment methods including:
 
 ### 2.1 Payment Window Restrictions
 
-- **Appointments within 72 hours**: Multibanco payments are **not available** for appointments scheduled within 72 hours of the current time
-- **Appointments beyond 72 hours**: Multibanco payments are accepted with special terms outlined below
+- **Appointments within 8 days**: Multibanco payments are **not available** for appointments scheduled within 8 days of the current time
+- **Appointments 8+ days in advance**: Multibanco payments are accepted with special terms outlined below
 
 ### 2.2 Slot Reservation System
 
-When paying with Multibanco for appointments scheduled more than 72 hours in advance:
+When paying with Multibanco for appointments scheduled 8 or more days in advance:
 
-- Your appointment slot is **reserved for 24 hours** from the time of booking
-- You have **24 hours** to complete the Multibanco payment
-- If payment is not received within 24 hours, the slot reservation expires and becomes available to other patients
+- Your appointment slot is **reserved for 7 days** from the time of booking
+- You have **7 full days** to complete the Multibanco payment
+- If payment is not received within 7 days, the slot reservation expires and becomes available to other patients
 
-### 2.3 Late Payment Processing
+### 2.3 Payment Reminder System
 
-If a Multibanco payment is processed after the 24-hour reservation period:
+To help ensure you don't miss your payment deadline:
+
+- **Day 3 Reminder**: Friendly reminder email with 4 days remaining to pay
+- **Day 6 Reminder**: Urgent final notice with 1 day remaining to pay
+- **Payment Instructions**: Each reminder includes complete Multibanco payment details and instructions
+- **Payment Methods**: Pay via ATM, online banking, or MB WAY (if supported by your bank)
+
+### 2.4 Late Payment Processing
+
+If a Multibanco payment is processed after the 7-day reservation period:
 
 - The system automatically checks for appointment conflicts
 - If the appointment slot is no longer available or conflicts with expert availability requirements, a **partial refund** will be processed
@@ -69,65 +78,95 @@ In cases of system errors or special circumstances:
 - Provide your payment reference and booking details
 - Our team will review and resolve the issue within 2 business days
 
-## 4. Expert Payment Processing
+## 4. Payment Method Selection Guide
 
-### 4.1 Payment Transfers
+### 4.1 Card Payments (Immediate)
+
+**Best for:**
+
+- Appointments within 8 days
+- Immediate confirmation needed
+- Last-minute bookings
+
+**Benefits:**
+
+- Instant payment processing
+- Immediate meeting link access
+- No payment deadline stress
+
+### 4.2 Multibanco Payments (7-Day Window)
+
+**Best for:**
+
+- Appointments planned well in advance (8+ days)
+- Portuguese residents preferring local payment methods
+- Those comfortable with deferred payment
+
+**Requirements:**
+
+- Appointment must be scheduled 8+ days in advance
+- Payment must be completed within 7 days
+- Access to ATM, online banking, or MB WAY
+
+## 5. Expert Payment Processing
+
+### 5.1 Payment Transfers
 
 - Expert payments are processed after successful appointment completion
 - Transfer schedule varies by expert's settings and local banking requirements
 - All transfers comply with Stripe Connect policies and local regulations
 
-### 4.2 Dispute Resolution
+### 5.2 Dispute Resolution
 
 - Payment disputes are handled through Stripe's dispute resolution process
 - Experts are notified immediately of any payment disputes
 - Documentation and evidence may be required for dispute resolution
 
-## 5. Currency and Pricing
+## 6. Currency and Pricing
 
-### 5.1 Base Currency
+### 6.1 Base Currency
 
 - All prices are displayed in Euros (EUR)
 - Currency conversion may apply for international payments
 - Exchange rates are determined by payment processors at the time of transaction
 
-### 5.2 Price Changes
+### 6.2 Price Changes
 
 - Appointment prices are locked at the time of booking
 - No additional charges will be applied after booking confirmation
 - Taxes and fees are included in the displayed price
 
-## 6. Payment Security
+## 7. Payment Security
 
-### 6.1 Data Protection
+### 7.1 Data Protection
 
 - All payment data is processed securely through Stripe
 - We do not store payment card details on our servers
 - All transactions are encrypted and comply with PCI DSS standards.
 
-### 6.2 Fraud Prevention
+### 7.2 Fraud Prevention
 
 - Automated fraud detection systems are in place
 - Suspicious transactions may be delayed or declined
 - Additional verification may be required for high-value transactions
 
-## 7. Failed Payments
+## 8. Failed Payments
 
-### 7.1 Payment Failures
+### 8.1 Payment Failures
 
 - Failed payments result in automatic appointment cancellation
 - Patients are notified immediately via email
 - New bookings can be made with valid payment methods
 
-### 7.2 Retry Policy
+### 8.2 Retry Policy
 
 - Automatic payment retries are not performed
 - Patients must initiate new payment attempts manually
 - Multiple failed attempts may result in temporary booking restrictions
 
-## 8. Customer Support
+## 9. Customer Support
 
-### 8.1 Payment Issues
+### 9.1 Payment Issues
 
 For payment-related questions or issues:
 
@@ -135,17 +174,17 @@ For payment-related questions or issues:
 - Response time: Within 24 hours
 - Available in multiple languages (English, Portuguese, Spanish, Brazilian Portuguese)
 
-### 8.2 Refund Requests
+### 9.2 Refund Requests
 
 - Refund requests must be submitted within 7 days of the original transaction
 - Medical emergency refunds are considered on a case-by-case basis
 - Cancellation policies apply as outlined in our Terms and Conditions
 
-## 9. Policy Updates
+## 10. Policy Updates
 
 These payment policies may be updated periodically. Users will be notified of significant changes via email and platform notifications. Continued use of the platform constitutes acceptance of updated policies.
 
-## 10. Legal Compliance
+## 11. Legal Compliance
 
 These policies comply with:
 
