--- a/content/payment-policies/br.mdx
+++ b/content/payment-policies/br.mdx
@@ -1,6 +1,6 @@
 # Políticas de Pagamento
 
-_Data de Vigência:_ 29 de maio de 2025
+_Data de Vigência:_ 3 de junho de 2025
 
 Estas Políticas de Pagamento regem todas as transações financeiras realizadas através da plataforma **Eleva.care**. Ao utilizar nossos serviços de pagamento, você concorda em estar sujeito a estas políticas além de nossos Termos e Condições.
 
@@ -15,20 +15,29 @@ A Eleva.care aceita vários métodos de pagamento, incluindo:
 
 ### 2.1 Restrições de Janela de Pagamento
 
-- **Consultas dentro de 72 horas**: Pagamentos Multibanco **não estão disponíveis** para consultas agendadas dentro de 72 horas do momento atual
-- **Consultas além de 72 horas**: Pagamentos Multibanco são aceitos com termos especiais descritos abaixo
+- **Consultas dentro de 8 dias**: Pagamentos Multibanco **não estão disponíveis** para consultas agendadas dentro de 8 dias do momento atual
+- **Consultas com 8+ dias de antecedência**: Pagamentos Multibanco são aceitos com termos especiais descritos abaixo
 
 ### 2.2 Sistema de Reserva de Horário
 
-Ao pagar com Multibanco para consultas agendadas com mais de 72 horas de antecedência:
+Ao pagar com Multibanco para consultas agendadas com 8 ou mais dias de antecedência:
 
-- Seu horário de consulta é **reservado por 24 horas** a partir do momento do agendamento
-- Você tem **24 horas** para completar o pagamento Multibanco
-- Se o pagamento não for recebido dentro de 24 horas, a reserva de horário expira e fica disponível para outros pacientes
+- Seu horário de consulta é **reservado por 7 dias** a partir do momento do agendamento
+- Você tem **7 dias completos** para completar o pagamento Multibanco
+- Se o pagamento não for recebido dentro de 7 dias, a reserva de horário expira e fica disponível para outros pacientes
 
-### 2.3 Processamento de Pagamento Tardio
+### 2.3 Sistema de Lembretes de Pagamento
 
-Se um pagamento Multibanco for processado após o período de reserva de 24 horas:
+Para ajudar a garantir que você não perca o prazo de pagamento:
+
+- **Lembrete do 3º Dia**: Email amigável de lembrete com 4 dias restantes para pagar
+- **Lembrete do 6º Dia**: Aviso final urgente com 1 dia restante para pagar
+- **Instruções de Pagamento**: Cada lembrete inclui todos os detalhes e instruções de pagamento Multibanco
+- **Métodos de Pagamento**: Pague via caixa eletrônico, internet banking, ou MB WAY (se suportado pelo seu banco)
+
+### 2.4 Processamento de Pagamento Tardio
+
+Se um pagamento Multibanco for processado após o período de reserva de 7 dias:
 
 - O sistema verifica automaticamente conflitos de consulta
 - Se o horário da consulta não estiver mais disponível ou entrar em conflito com os requisitos de disponibilidade do especialista, será processado um **reembolso parcial**
@@ -69,65 +78,95 @@ Em casos de erros do sistema ou circunstâncias especiais:
 - Forneça sua referência de pagamento e detalhes do agendamento
 - Nossa equipe irá revisar e resolver a questão dentro de 2 dias úteis
 
-## 4. Processamento de Pagamentos de Especialistas
+## 4. Guia de Seleção de Método de Pagamento
 
-### 4.1 Transferências de Pagamento
+### 4.1 Pagamentos por Cartão (Imediato)
+
+**Melhor para:**
+
+- Consultas dentro de 8 dias
+- Confirmação imediata necessária
+- Agendamentos de última hora
+
+**Benefícios:**
+
+- Processamento instantâneo de pagamento
+- Acesso imediato ao link da reunião
+- Sem estresse de prazo de pagamento
+
+### 4.2 Pagamentos Multibanco (Janela de 7 Dias)
+
+**Melhor para:**
+
+- Consultas planejadas com muita antecedência (8+ dias)
+- Residentes portugueses que preferem métodos de pagamento locais
+- Aqueles confortáveis com pagamento diferido
+
+**Requisitos:**
+
+- A consulta deve ser agendada com 8+ dias de antecedência
+- O pagamento deve ser concluído dentro de 7 dias
+- Acesso a caixa eletrônico, internet banking, ou MB WAY
+
+## 5. Processamento de Pagamentos de Especialistas
+
+### 5.1 Transferências de Pagamento
 
 - Pagamentos de especialistas são processados após conclusão bem-sucedida da consulta
 - O cronograma de transferência varia conforme as configurações do especialista e requisitos bancários locais
 - Todas as transferências atendem às políticas do Stripe Connect e regulamentações locais
 
-### 4.2 Resolução de Disputas
+### 5.2 Resolução de Disputas
 
 - Disputas de pagamento são tratadas através do processo de resolução de disputas do Stripe
 - Especialistas são notificados imediatamente de quaisquer disputas de pagamento
 - Documentação e evidências podem ser necessárias para resolução de disputas
 
-## 5. Moeda e Preços
+## 6. Moeda e Preços
 
-### 5.1 Moeda Base
+### 6.1 Moeda Base
 
 - Todos os preços são exibidos em Euros (EUR)
 - Conversão de moeda pode se aplicar para pagamentos internacionais
 - Taxas de câmbio são determinadas pelos processadores de pagamento no momento da transação
 
-### 5.2 Mudanças de Preços
+### 6.2 Mudanças de Preços
 
 - Preços de consultas são fixados no momento do agendamento
 - Não serão aplicadas taxas adicionais após confirmação do agendamento
 - Impostos e taxas estão incluídos no preço exibido
 
-## 6. Segurança de Pagamentos
+## 7. Segurança de Pagamentos
 
-### 6.1 Proteção de Dados
+### 7.1 Proteção de Dados
 
 - Todos os dados de pagamento são processados com segurança através do Stripe
 - Não armazenamos detalhes de cartões de pagamento em nossos servidores
 - Todas as transações são criptografadas e atendem aos padrões PCI DSS
 
-### 6.2 Prevenção de Fraude
+### 7.2 Prevenção de Fraude
 
 - Sistemas automatizados de detecção de fraude estão implementados
 - Transações suspeitas podem ser atrasadas ou recusadas
 - Verificação adicional pode ser necessária para transações de alto valor
 
-## 7. Pagamentos Falhados
+## 8. Pagamentos Falhados
 
-### 7.1 Falhas de Pagamento
+### 8.1 Falhas de Pagamento
 
 - Pagamentos falhados resultam em cancelamento automático da consulta
 - Pacientes são notificados imediatamente por email
 - Novos agendamentos podem ser feitos com métodos de pagamento válidos
 
-### 7.2 Política de Tentativa
+### 8.2 Política de Tentativa
 
 - Tentativas automáticas de pagamento não são realizadas
 - Pacientes devem iniciar novas tentativas de pagamento manualmente
 - Múltiplas tentativas falhadas podem resultar em restrições temporárias de agendamento
 
-## 8. Suporte ao Cliente
+## 9. Suporte ao Cliente
 
-### 8.1 Problemas de Pagamento
+### 9.1 Problemas de Pagamento
 
 Para perguntas ou problemas relacionados a pagamentos:
 
@@ -135,17 +174,17 @@ Para perguntas ou problemas relacionados a pagamentos:
 - Tempo de resposta: Dentro de 24 horas
 - Disponível em múltiplos idiomas (Inglês, Português, Espanhol, Português Brasileiro)
 
-### 8.2 Solicitações de Reembolso
+### 9.2 Solicitações de Reembolso
 
 - Solicitações de reembolso devem ser enviadas dentro de 7 dias da transação original
 - Reembolsos por emergência médica são considerados caso a caso
 - Políticas de cancelamento se aplicam conforme descrito em nossos Termos e Condições
 
-## 9. Atualizações de Políticas
+## 10. Atualizações de Políticas
 
 Estas políticas de pagamento podem ser atualizadas periodicamente. Usuários serão notificados de mudanças significativas por email e notificações da plataforma. O uso continuado da plataforma constitui aceitação das políticas atualizadas.
 
-## 10. Conformidade Legal
+## 11. Conformidade Legal
 
 Estas políticas atendem a:
 
