--- a/content/history/br.mdx
+++ b/content/history/br.mdx
@@ -1,5 +1,6 @@
 import { Button } from '@/components/atoms/button';
 import { Separator } from '@/components/atoms/separator';
+import { Link } from '@/lib/i18n/navigation';
 import Image from 'next/image';
 
 <div className="max-w-4xl mx-auto">
@@ -9,28 +10,43 @@ import Image from 'next/image';
 <header className="mb-16 pt-12 sm:pt-16">
   <div className="text-center">
     <h2 className="mt-16 font-mono text-xs/5 font-normal uppercase tracking-widest text-eleva-neutral-900/70 data-[dark]:text-eleva-neutral-900/60">
-      Uma Carta do Nosso Fundador
+      {'Uma Carta do Nosso Fundador'}
     </h2>
     <h1 className="mt-2 text-pretty font-serif text-4xl font-light tracking-tighter text-eleva-primary data-[dark]:text-eleva-neutral-100 sm:text-6xl">
-      A História por Trás da Eleva Care
+      {'A História por Trás da Eleva Care'}
     </h1>
     <p className="mx-auto mt-6 max-w-2xl text-balance text-base font-light text-eleva-neutral-900 lg:text-xl">
-      Todo empreendimento significativo começa com um problema que exige uma solução. Esta é a
-      nossa.
+      {
+        'Todo empreendimento significativo começa com um problema que exige uma solução. Esta é a nossa.'
+      }
     </p>
   </div>
 </header>
 
 {/* Author info */}
 
-<div className="mb-12 flex items-center gap-3">
+<div className="mb-12 mt-10 flex items-center justify-center gap-3">
   <div className="flex aspect-square size-12 items-center justify-center rounded-full bg-gradient-to-br from-pink-400 to-purple-500">
-    <span className="text-lg font-semibold text-white">R</span>
+    <span className="text-lg font-semibold text-white">P</span>
   </div>
-  <div>
-    <div className="font-medium text-gray-900">Rodrigo Barona</div>
-    <div className="text-sm text-gray-600">Fundador e CEO, Eleva Care</div>
+  <div className="text-center">
+    <div className="font-medium text-gray-900">Patrícia Mota</div>
+    <div className="text-sm text-gray-600">Fundadora, Fisioterapeuta e Doutora em Biomecânica</div>
   </div>
+</div>
+
+{/* Team photo */}
+
+<div className="mb-16 mt-12">
+  <Image
+    src="/img/about/team-photo.png"
+    alt="Patrícia e Rodrigo - Fundadores da Eleva Care"
+    width={900}
+    height={600}
+    className="mx-auto rounded-2xl shadow-lg"
+    loading="lazy"
+    sizes="(max-width: 768px) 100vw, (max-width: 1200px) 80vw, 800px"
+  />
 </div>
 
 {/* Main content with blog-style formatting */}
@@ -122,17 +138,23 @@ _P.S. Se isso ressoa com você, adoraria ouvir de você. Sério mesmo. Me mande 
 
 {/* Call to action */}
 
-<div className="mt-16 rounded-3xl bg-gradient-to-br from-pink-50 to-purple-50 py-12 text-center">
-  <h3 className="mb-4 text-2xl font-semibold text-gray-900">Pronta para fazer parte da mudança?</h3>
-  <p className="mx-auto mb-8 max-w-xl text-gray-600">
-    Junte-se a milhares de mulheres que estão transformando sua jornada de saúde com a Eleva Care.
+<div className="mt-16 rounded-3xl bg-gradient-to-br from-pink-50 to-purple-50 py-16 text-center">
+  <h3 className="mx-auto max-w-xs font-mono text-xs/5 font-normal uppercase tracking-widest text-eleva-neutral-900/70">
+    {'Pronto para cuidados baseados em evidência?'}
+  </h3>
+  <p className="mx-auto mt-2 max-w-3xl text-pretty font-serif text-4xl font-light tracking-tighter text-eleva-neutral-900 sm:text-5xl">
+    {'Junte-se a milhares de mulheres que confiam em nossos especialistas'}
   </p>
-  <Button
-    size="lg"
-    className="bg-gradient-to-r from-pink-500 to-purple-600 hover:from-pink-600 hover:to-purple-700"
-  >
-    Comece Hoje
-  </Button>
+  <p className="mx-auto mt-6 max-w-xl text-sm/6 text-eleva-neutral-900/60">
+    {'Encontre especialistas na Eleva Care que realmente entendem sua jornada de saúde.'}
+  </p>
+  <div className="mt-8 flex justify-center gap-4">
+    <Link href="/#experts">
+      <Button size="lg" className="rounded-full">
+        {'Agende Sua Consulta'}
+      </Button>
+    </Link>
+  </div>
 </div>
 
 </div>
