Add CTA button to TeamSection and about pages
Introduces optional call-to-action (CTA) button support in the TeamSection component, allowing display of a button with customizable text and link. Updates all language variants of the about page to include a localized CTA button linking to the organization's history page.

--- a/content/about/br.mdx
+++ b/content/about/br.mdx
@@ -85,6 +85,8 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     },
   ]}
   title="Nossa liderança"
+  ctaText="Saiba mais"
+  ctaLink="/pt-br/history"
   leadership={[
     {
       name: 'Patricia Mota, PT, PhD',
