--- a/content/about/en.mdx
+++ b/content/about/en.mdx
@@ -85,6 +85,8 @@ import TeamSection from '@/components/organisms/about/TeamSection';
         'Today, Eleva Care is transforming how women access and experience healthcare. Our platform connects thousands of women with specialized healthcare providers, offering evidence-based care and support throughout every life stage.',
     },
   ]}
+  ctaText="Read our story"
+  ctaLink="/history"
   title="Our Leadership"
   leadership={[
     {
