--- a/content/about/es.mdx
+++ b/content/about/es.mdx
@@ -84,6 +84,8 @@ import TeamSection from '@/components/organisms/about/TeamSection';
         'Hoy, Eleva Care está transformando cómo las mujeres acceden y experimentan la atención médica. Nuestra plataforma conecta a miles de mujeres con proveedores de atención médica especializados, ofreciendo atención y apoyo basados en evidencia a lo largo de cada etapa de la vida.',
     },
   ]}
+  ctaText="Lee nuestra historia"
+  ctaLink="/es/history"
   title="Nuestra lídera"
   leadership={[
     {
