--- a/content/about/pt.mdx
+++ b/content/about/pt.mdx
@@ -83,6 +83,8 @@ import TeamSection from '@/components/organisms/about/TeamSection';
         'Hoje, a Eleva Care está a transformar a forma como as mulheres acedem e experimentam os cuidados de saúde. A nossa plataforma liga milhares de mulheres a prestadores de cuidados de saúde especializados, oferecendo cuidados baseados em evidências e apoio ao longo de cada etapa da vida.',
     },
   ]}
+  ctaText="Saiba mais"
+  ctaLink="/pt/history"
   title="Nossa liderança"
   leadership={[
     {
