Update author and closing message in BR and ES history
Replaces Rodrigo Barona with Patrícia Mota as the author in the Brazilian Portuguese and Spanish history pages. Updates the closing message to reflect a new focus on evidence-based care and community growth, and includes Patrícia's credentials.

--- a/content/history/br.mdx
+++ b/content/history/br.mdx
@@ -127,12 +127,13 @@ E movimentos mudam o mundo.
 
 ---
 
-_Com gratidão e determinação,_
+_Com dedicação à ciência e cuidado genuíno,_
 
-**Rodrigo Barona**  
-_Fundador e CEO, Eleva Care_
+**Patrícia Mota**  
+_Fundadora, Eleva Care_  
+_Fisioterapeuta e Doutora em Biomecânica_
 
-_P.S. Se isso ressoa com você, adoraria ouvir de você. Sério mesmo. Me mande uma mensagem, compartilhe sua história, ou apenas diga olá. Esta comunidade é tão forte quanto as vozes dentro dela._
+_P.S. Se és uma profissional de saúde que partilha esta visão, ou uma mulher que procura cuidados baseados em evidência, adoraria conhecer-te. Esta comunidade cresce com cada voz que se junta à nossa._
 
 </div>
 
