--- a/content/history/es.mdx
+++ b/content/history/es.mdx
@@ -127,12 +127,13 @@ Y los movimientos cambian el mundo.
 
 ---
 
-_Con gratitud y determinación,_
+_Con dedicación a la ciencia y cuidado genuino,_
 
-**Rodrigo Barona**  
-_Fundador y CEO, Eleva Care_
+**Patrícia Mota**  
+_Fundadora, Eleva Care_  
+_Fisioterapeuta y Doctora en Biomecánica_
 
-_P.D. Si esto resuena contigo, me encantaría escucharte. En serio. Envíame un mensaje, comparte tu historia, o simplemente saluda. Esta comunidad es tan fuerte como las voces dentro de ella._
+_P.S. Si eres una profesional de la salud que comparte esta visión, o una mujer que busca atención basada en evidencia, me encantaría conocerte. Esta comunidad crece con cada voz que se une a la nuestra._
 
 </div>
 
