Update apply links and add OG image to history page
Changed the application links in all about pages from a waitlist URL to a mailto link for direct email applications. Also added an Open Graph image to the history page metadata for improved social sharing.

--- a/content/about/en.mdx
+++ b/content/about/en.mdx
@@ -207,6 +207,6 @@ import TeamSection from '@/components/organisms/about/TeamSection';
         'Join a network of leading healthcare professionals and participate in case discussions and knowledge sharing.',
     },
   ]}
-  applyUrl="https://accounts.eleva.care/waitlist"
+  applyUrl="mailto:patimota@gmail.com?subject=Application%20for%20Eleva%20Care&body=Hello%20Patrícia,%20I%20would%20like%20to%20apply%20for%20Eleva%20Care."
   applyButtonText="Apply to Join"
 />
