--- a/content/about/es.mdx
+++ b/content/about/es.mdx
@@ -206,6 +206,6 @@ import TeamSection from '@/components/organisms/about/TeamSection';
         'Únete a una red de profesionales de la salud líderes y participa en discusiones de casos e intercambio de conocimientos.',
     },
   ]}
-  applyUrl="https://accounts.eleva.care/waitlist"
+  applyUrl="mailto:patimota@gmail.com?subject=Candidatura%20para%20a%20Eleva%20Care&body=Hola%20Patrícia,%20me gustaría%20candidatarme%20para%20Eleva%20Care."
   applyButtonText="Solicitar Unirse"
 />
