--- a/content/about/pt.mdx
+++ b/content/about/pt.mdx
@@ -204,6 +204,6 @@ import TeamSection from '@/components/organisms/about/TeamSection';
         'Junte-se a uma rede de profissionais de saúde líderes e participe em discussões de casos e partilha de conhecimentos.',
     },
   ]}
-  applyUrl="https://accounts.eleva.care/waitlist"
+  applyUrl="mailto:patimota@gmail.com?subject=Candidatura%20para%20a%20Eleva%20Care&body=Olá%20Patrícia,%20gostaria%20de%20candidatar-me%20para%20a%20Eleva%20Care."
   applyButtonText="Candidatar-se"
 />
