Update history pages with new intro and author info
Revised the introductory text in all language versions to emphasize advocacy in evidence-based women's health. Removed the author avatar graphic from the author info section for a cleaner layout.

--- a/content/history/en.mdx
+++ b/content/history/en.mdx
@@ -16,7 +16,7 @@ import Image from 'next/image';
       {'The Story Behind Eleva Care'}
     </h1>
     <div className="mx-auto mt-6 max-w-2xl text-balance text-base font-light text-eleva-neutral-900 lg:text-xl">
-      {"How a physiotherapist became a pioneer in evidence-based women's health."}
+      {"How a physiotherapist became an advocate for evidence-based women's health."}
     </div>
   </div>
 </header>
@@ -24,9 +24,7 @@ import Image from 'next/image';
 {/* Author info */}
 
 <div className="mb-12 mt-10 flex items-center justify-center gap-3">
-  <div className="flex aspect-square size-12 items-center justify-center rounded-full bg-gradient-to-br from-pink-400 to-purple-500">
-    <span className="text-lg font-semibold text-white">P</span>
-  </div>
+
   <div className="text-center">
     <div className="font-medium text-gray-900">Patrícia Mota</div>
     <div className="text-sm text-gray-600">Founder, Physiotherapist and PhD in Biomechanics</div>
