--- a/content/history/es.mdx
+++ b/content/history/es.mdx
@@ -17,7 +17,7 @@ import Image from 'next/image';
     </h1>
     <div className="mx-auto mt-6 max-w-2xl text-balance text-base font-light text-eleva-neutral-900 lg:text-xl">
       {
-        'Toda empresa con propósito comienza con un problema que exige una solución. Esta es la nuestra.'
+        'Cómo una fisioterapeuta se convirtió en defensora de la salud femenina basada en evidencia.'
       }
     </div>
   </div>
@@ -26,9 +26,7 @@ import Image from 'next/image';
 {/* Author info */}
 
 <div className="mb-12 mt-10 flex items-center justify-center gap-3">
-  <div className="flex aspect-square size-12 items-center justify-center rounded-full bg-gradient-to-br from-pink-400 to-purple-500">
-    <span className="text-lg font-semibold text-white">P</span>
-  </div>
+
   <div className="text-center">
     <div className="font-medium text-gray-900">Patrícia Mota</div>
     <div className="text-sm text-gray-600">Fundadora, Fisioterapeuta y Doctora en Biomecánica</div>
