--- a/content/history/pt.mdx
+++ b/content/history/pt.mdx
@@ -14,7 +14,7 @@ import Image from 'next/image';
       {'A História da Eleva Care'}
     </h1>
     <div className="mx-auto mt-6 max-w-2xl text-balance text-base font-light text-eleva-neutral-900 lg:text-xl">
-      {'Como uma fisioterapeuta se tornou pioneira na saúde da mulher baseada em evidência.'}
+      {'Como uma fisioterapeuta se tornou defensora da saúde da mulher baseada em evidência.'}
     </div>
   </div>
 </header>
@@ -22,9 +22,7 @@ import Image from 'next/image';
 {/* Author info */}
 
 <div className="mb-12 mt-10 flex items-center justify-center gap-3">
-  <div className="flex aspect-square size-12 items-center justify-center rounded-full bg-gradient-to-br from-pink-400 to-purple-500">
-    <span className="text-lg font-semibold text-white">P</span>
-  </div>
+
   <div className="text-center">
     <div className="font-medium text-gray-900">Patrícia Mota</div>
     <div className="text-sm text-gray-600">Fundadora, Fisioterapeuta e Doutora em Biomecânica</div>
