--- a/content/history/br.mdx
+++ b/content/history/br.mdx
@@ -16,9 +16,7 @@ import Image from 'next/image';
       {'A História por Trás da Eleva Care'}
     </h1>
     <p className="mx-auto mt-6 max-w-2xl text-balance text-base font-light text-eleva-neutral-900 lg:text-xl">
-      {
-        'Todo empreendimento significativo começa com um problema que exige uma solução. Esta é a nossa.'
-      }
+      {'Como uma fisioterapeuta se tornou uma defensora da saúde da mulher baseada em evidências.'}
     </p>
   </div>
 </header>
@@ -26,9 +24,7 @@ import Image from 'next/image';
 {/* Author info */}
 
 <div className="mb-12 mt-10 flex items-center justify-center gap-3">
-  <div className="flex aspect-square size-12 items-center justify-center rounded-full bg-gradient-to-br from-pink-400 to-purple-500">
-    <span className="text-lg font-semibold text-white">P</span>
-  </div>
+
   <div className="text-center">
     <div className="font-medium text-gray-900">Patrícia Mota</div>
     <div className="text-sm text-gray-600">Fundadora, Fisioterapeuta e Doutora em Biomecânica</div>
